--- a/mplive.html
+++ b/mplive.html
@@ -250,7 +250,7 @@ input[type="submit"]:hover {
 		<a href="https://www.instagram.com/jan_dostal48/" target="_blank"><i>
 		<img src="Instagram_logo_2016.svg.webp" width="30px" alt="instagram-logo">
 			</i></a>
-			<a href="/honza.dostal.716" target="_blank"><i>
+			<a href="/https://www.facebook.com/honza.dostal.716" target="_blank"><i>
 		<img src="facebookikonatransparentni.png" width="30px" alt="facebook-logo">
 		</i></a>
 		
