--- a/mplive.html
+++ b/mplive.html
@@ -262,7 +262,7 @@ input[type="submit"]:hover {
 
 
 	<h2 class="honza">
-	Ahoj, jmenuji se Honza
+	Ahoj, jmenuji se Honza,
 </h2>
 <h1>
 	Jsem fitness nadšenec a budoucí osobní trenér
