--- a/mplive.html
+++ b/mplive.html
@@ -215,6 +215,8 @@ input[type="submit"]:hover {
     width: 100%;
     padding: 10px;
   }
+	  #kontakt12 {display: flex ;
+	margin-right: 10px;}
 }
 
 /* vetsi nez 768px */
@@ -239,7 +241,7 @@ input[type="submit"]:hover {
 		</div>
 
 		<div class="odkazy-nahore">	
-			<a href="#linksem" class="jakocudlik">Kontakt</a>					
+			<a id="kontakt12" href="#linksem" class="jakocudlik">Kontakt</a>					
 		</div>	
 		
 		<div class="odkazy-nahore" id="nabidka"> 		
